@@ -882,6 +882,20 @@ const run = async (): Promise<void> => {
   {
     const outDir = mkTmp();
     const tmp = mkTmp();
+    const partialVsix = path.join(tmp, "partial_extension.vsix");
+    writeStoredZip(partialVsix, [
+      { name: "extension/manifest.json", text: JSON.stringify({ manifest_version: 3, name: "demo", version: "1.0.0" }) },
+      { name: "extension/background.js", text: "console.log('x');" },
+    ]);
+    corruptSecondZipCentralSignature(partialVsix);
+    const res = await runCliCapture(["safe-run", partialVsix, "--out", outDir, "--adapter", "extension"]);
+    assertEq(res.status, 40, "safe-run should fail closed when extension ZIP metadata is partial after parsed entries");
+    assert(res.stderr.includes("EXTENSION_FORMAT_MISMATCH"), "expected EXTENSION_FORMAT_MISMATCH on stderr for partial extension zip metadata");
+  }
+
+  {
+    const outDir = mkTmp();
+    const tmp = mkTmp();
     const badIso = path.join(tmp, "bad.iso");
     fs.writeFileSync(badIso, "not-an-iso", "utf8");
     const badRes = await runCliCapture(["safe-run", badIso, "--out", outDir, "--adapter", "image"]);
